Editing Sept '24 drafts

--- a/2024/2024-09-15.md
+++ b/2024/2024-09-15.md
@@ -1,81 +1,68 @@
-# tktk
-## tktk
+# Is ether really an "altcoin" at this point?
+## Let's face it. Just like bitcoin, it's here to stay.
 
-![Close-up of a Monopoly board game](https://w3w.news/img/ged-carroll-2500.jpg)
-*Photo by Ged Carroll via Flickr under [Creative Commons License](https://creativecommons.org/licenses/by/2.0/). Photo cropped slightly from [Carroll's original](https://www.flickr.com/photos/renaissancechambara/2951844423/in/photolist-5uQYvn-jaRcES-qvxovj-qggAJN-qgfVi1-qxDHqe-pAPYbQ-2XNYr-qgpuSt-qxPsuM-qggAkb-pB4ohP-J5Pmx-5uQY4v-pAPXZY-qgfWHA-qxDKsF-pAPZ6A-3J6xoG-8ujMau-38PKDo-38PKRE-38PKKY-74kf47-xDw5K-38KbyF-e51418-xDw7b-5RKRwp-xDw9S-xDwCw-xDw49-7ML5A1-xDwHj-7ML5Xj-7ML5ns-PnzCb3-7MG6dn-7MG5BK-7MG6UT-7ML6jJ-7ML6Rf-xDw8A-xDwFM-xDw2j-xDvZr-6X5WUA-xDvX7-GKR5fB-8cqFAn).*
+![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
+*Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).*
 
-<!-- Lede item: Should run ~450 words. A few possibilities...
+<!-- For LinkedIn, caption should read: *Cropped photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).* -->
 
-- GRAHAM: His new "founder mode" post is mostly bullshit.
+**For as long as I've been involved in web3,** the term "altcoin" has been shorthand for "everything other than bitcoin."
 
-- NEWMANTRA: A newsletter about emerging tech, for newbies and OGs alike. Emerging tech made accessible.
+There is certainly at least one objective reason why such a distinction is useful: Bitcoin continues to have a comfortable majority share of the global token market. So-called "bitcoin dominance" now stands at 57% of the $2.1 trillion crypto market worldwide, according to [CoinMarketCap](https://coinmarketcap.com/charts/#bitcoin-dominance).
 
-- 2USECASES: Signin/privacy and payments are two killer cases that most apps outside of Big Tech ought to be using.
+But I have always felt there is a squishier, more subjective connotation to "altcoin" as well. The term carries a whiff of "iffy stuff that might plausibly just go away at any moment."
 
-- 4PART: The token can market can safely be broken down into several categories -- bitcoin, ethereum, major stablecoins, and everything else. Here's why that matters.
+As in: "We know this bitcoin thing will last. But all these other tokens? Meh."
 
-- STRING: See page at https://www.notion.so/String-b5f6d8f2bb6f4eacb96c95276dc242bb
+Heck, the most hardcore bitcoiners, [known as maxis](https://www.investopedia.com/terms/b/bitcoin-maximalism.asp), will even say such things out loud. Everyone else in crypto is mostly content just to imply it, purposefully or not.
 
--->
+For more than 99% of the 2.4 million tokens that CoinMarketCap tracks, I would even agree with that framing. Yes, most of those tokens could plausibly go to zero.
 
+And, yes, bitcoin is fundamentally different, more mature, more integrated with conventional finance, with real scarcity and true decentralization, and thus likely to hang around for the long term.
+
+But I would also say at this point that ether, the native token of the Ethereum network, represents a pretty similar exception. It's the number-two token by market cap, with a [$274 billion market cap](https://coinmarketcap.com/currencies/ethereum/) that comprises 14% of the global crypto market.
+
+(Full disclosure: I do own small amounts of both ether and bitcoin.)
+
+For perspective, here's how ether's valuation stacks up against the market caps of some notable public companies as of Friday's close on Wall Street:
+
+- [Coca-Cola](https://finance.yahoo.com/quote/KO/): $308 billion
+- [Netflix](https://finance.yahoo.com/quote/NFLX/): $299 billion
+- **Ether:** $274 billion  
+- [McDonald's](https://finance.yahoo.com/quote/MCD/): $213 billion
+- [Uber](https://finance.yahoo.com/quote/UBER/): $152 billion
+- [Goldman Sachs](https://finance.yahoo.com/quote/GS/): $151 billion
+
+Just as important, as a development platform, Ethereum has shown real [network effects](https://en.wikipedia.org/wiki/Network_effect) in recent years. Clearly, there are now people building on it because other people are building on it, which then attracts more people to build on it over time.
+
+I know that may sound weird or crazy or even shady to some folks, but it's really not. It's similar to when you see users joining a social platform because their friends are joining it, which then makes the company running the social platform more valuable. This pattern is evident -- and it's purposefully cultivated and very powerful when executed correctly -- all through the tech industry.
+
+For ether, it's also a good reason why the term "altcoin" might not really apply anymore.
 
 
 ### Week in Review: Sept. 8-14, 2024
 
-<!--
+- **New data suggest the gender pay gap is significantly wider in web3 finance than in web2.** Women earn 46% less than men in web3, versus a 36% disparity in web2, according to the newly issued Web3 Finance Compensation Report. Yikes. ([Forbes](https://www.forbes.com/sites/digital-assets/2024/08/29/what-web3-data-reveals-about-gender-inequality-in-the-crypto-industry/))
 
-Some leftovers from last week...
+- **AI saw some splashy product announcements.** OpenAI launched a new chatbot model dubbed o1 that the company says "reasons" [more like a person](https://techcrunch.com/2024/09/12/openai-unveils-a-model-that-can-fact-check-itself/), including better internal fact-checking of its responses. Meanwhile, Apple [unveiled the iPhone 16](https://www.chron.com/news/article/apple-iphone-ai-apple-intelligence-19754948.php), which features AI functionality that runs mostly on the device. Some early reviewers were lukewarm, however. The Washington Post's Geoffrey Fowler [wrote](https://news.google.com/read/CBMinAFBVV95cUxNdlBtYmVzLTBtcjZRdHFWc0t3enB2dW01NFFuaE1RRnpraDNFOVVKNFM5Qzd6VnVTUlc1eV82Mmp4SlF0YTJWT1JMbzU2WG01ZjVvSHVIb05MbDBkRmJyX2RES2lhZDJ1RzVieWtGUURCdjRHXzFmMVRrRDBLNzNXQ0JXeHJEWHhsVVRFbkdKTWVTbnA5N1BpT1F0V1c?hl=en-US&gl=US&ceid=US%3Aen) that a test version of the new iPhone he received seemed prone to the sort of hallucinations that have dogged other publicly available AI systems. "We might just have to get used to some level of nonsense now spread all over our iPhones," Fowler says.
 
-- Mt. Gox co-founder opening a new exchange. https://www.theblock.co/post/314566/former-mt-gox-ceo-new-exchange-launching-this-month | Looking back at old hack: https://www.coindesk.com/business/2024/09/04/mt-gox-wouldnt-have-happened-with-modern-tools-mark-karpeles/
+- **A state-backed company in the  United Arab Emirates** is in talks to invest in OpenAI. As part of the negotiations, which would reportedly value OpenAI at $150 billion, the company has said it expects $4 billion in revenue this year. But it isn't yet profitable. ([Wall Street Journal](https://www.wsj.com/tech/ai/united-arab-emirates-fund-in-talks-to-invest-in-openai-fd4e4977?st=RjtXxh&reflink=desktopwebshare_permalink))
 
-- Telegram is unprofitable. But it holds a lot of crypto tokens. ([Fortune](https://fortune.com/2024/09/02/telegram-financials-crypto-toncoin/))
+- **Crypto payments are getting much easier.** U.S. users of PayPal and Venmo can now send payments [via the Ethereum Name Service](https://decrypt.co/248739/paypal-and-venmo-users-can-now-send-crypto-payment-with-ens-names), an on-chain routing tool similar to web2's [Domain Name System](https://en.wikipedia.org/wiki/Domain_Name_System). Separately, [Mastercard and Mercuryo](https://www.msn.com/en-us/money/other/mastercard-launches-crypto-card-enabling-users-to-spend-in-100-million-european-merchants/ar-AA1q38Jf) announced a partnership to offer a crypto debit card in Europe allowing users to spend tokens with more than 100 million merchants.
 
-- https://finance.yahoo.com/news/m-economist-predictions-crypto-2025-140053579.html
+- **Former European Central Bank President Mario Draghi** published [a long-awaited report](https://commission.europa.eu/document/download/97e481fd-2dc3-412d-be4c-f152a8232961_en?filename=The%20future%20of%20European%20competitiveness%20_%20A%20competitiveness%20strategy%20for%20Europe.pdf) with [recommendations](https://www.reuters.com/markets/europe/main-elements-draghi-competitiveness-report-2024-09-09/) to encourage innovation in Europe. In an [essay](https://news.google.com/read/CBMiswFBVV95cUxNaDZ2eTBwX25xUVh4S0Jua0ZjNHhiYnN3Qjd3LTNJUGZYbTVrYWdGZmR0b0c4eWhkLW4tc1ZyWVB4Rlc0VVQzWmpDY2JVNWY1R0ZhUW9UMGRybnVKeWR4Sk5KTTN0elFKRjVuUnZNcUM5cUFzQ0dzQV80MlpiT05DazVQREp4eTZWdGJkNHdQWHo5MFdIVkhvc0xJUVlZU2haMU0yV1Zqd2NlYXJzU0pfWGNZUQ?hl=en-US&gl=US&ceid=US%3Aen) for The Economist, Draghi warned: "Growth in Europe has been slowing for decades... For most of this period, slowing growth could be seen as an inconvenience but not a calamity. No more."
 
-- New FBI warning on crypto hacks from North Korea ([Forbes](https://www.forbes.com/sites/daveywinder/2024/09/04/fbi-issues-new-crypto-attack-alert-do-these-4-things-now/))
-
-- ETH defi markets are flagging. ([The Block](https://www.theblock.co/post/314465/ethereum-on-chain-lending-markets-see-second-largest-liquidations-ever-amid-eth-price-plunge))
-
-- AI generated video about the Paris Olympis ([MIT Technology Review](https://www.technologyreview.com/2024/09/03/1103516/what-this-futuristic-olympics-video-says-about-the-state-of-generative-ai/))
-
-- Upcoming OpenAI projects... ([Decrypt](https://decrypt.co/247769/openai-strawberry-orion-gpt-next))
-
-
-- tk ([]())
-- tk ([]())
-
-- https://www.technologyreview.com/2024/09/06/1103707/roblox-is-launching-a-generative-ai-that-builds-3d-environments-in-a-snap/ (Need a Google News version)
-
-- https://decrypt.co/248184/cz-banned-from-any-present-or-future-involvement-in-managing-binance
-
-- OverProtocol launch ([BeInCrypto](https://beincrypto.com/overprotocol-successfully-launches-mainnet-as-a-layer-1-blockchain/))
-
-- New Qatar framework. ([CoinDesk](https://finance.yahoo.com/news/qatar-brings-crypto-rules-framework-113448328.html))
-
--->
-
-- tk ([]())
-- tk ([]())
+- **America's Commodity Futures Trading Commission** said in a court filing that "an explosion of election gambling" via prediction markets is imminent heading into November's nationwide vote. ([CoinDesk](https://www.coindesk.com/policy/2024/09/15/an-explosion-of-election-gambling-is-nigh-cftc-warns-appeals-court/))
 
 ### Community
 
 - **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra perks compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and chat features. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack/subscribe) ☯️ 😉  
 
-<!--
-
-- Add BTC addy...
-
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar ->
-
--->
-
 ### Odds & Ends
 
-<!-- Some evergreen candidates... -->
+- **Acting legend James Earl Jones,** who died last week at 93, will nevertheless [continue via AI](https://www.yahoo.com/entertainment/james-earl-jones-darth-vader-045927400.html) in perhaps his most famous role, as Star Wars villain Darth Vader. In fact, the AI-assisted version of Vader has already made [his debut](https://www.youtube.com/watch?v=1PGoTarJMI4), in the 2022 streaming show "Obi-Wan Kenobi."
 
-- **Should we regulate the moon?** https://www.space.com/moon-lunar-resources-international-cooperation
-
-- Getting married on-chain. https://qz.com/marriage-wedding-crypto-blockchain-1851632745
+- **Interior designers are hoarding old-fashioned incandescent light bulbs** -- and even trafficking them secondhand online -- before they become unavailable in retail markets due to new efficiency standards in the U.S. ([Washington Post](https://www.washingtonpost.com/home/2024/09/09/designers-hoard-incandescent-bulbs-led/))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
