Updating sept '24 drafts

--- a/2024/2024-09-22.md
+++ b/2024/2024-09-22.md
@@ -1,59 +1,104 @@
-# tktk
-## tktktk
+# Sell, Elon. Sell.
+## TKTKKTKTK
 
-![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
-*Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).*
+![Bluebird apparently "pointing " with his wing, telling another bluebird to GTFO.](https://images.unsplash.com/photo-1650423621016-4e3b97a8d37f?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+*Photo courtesy of the Dulcey Lima via Unsplash*
 
-<!-- Lede item: Should run ~450 words. A few possibilities...
+**Turns out it's really bad for business** for a tech CEO to repeatedly [alienate](https://www.nbcnews.com/tech/elon-musk-black-twitter-influencers-hate-speech-rcna59474) users of his product, file [frivolous lawsuits](https://www.nbcnews.com/tech/tech-news/elon-musk-x-twitter-ccdh-lawsuit-rcna144960), arbitrarily [dump a brand name](https://www.forbes.com/sites/marcuscollins/2023/07/30/the-real-lesson-to-be-learned-from-twitters-rebrand/) so recognizable it's a widely used verb, respond [with poop emojis](https://mashable.com/article/twitter-press-poop-emoji) to press inquiries as a standard PR "strategy," use psychedelic drugs so much that his board members leak their concerns [to the Wall Street Journal](https://www.wsj.com/business/elon-musk-illegal-drugs-e826a9e1?st=qxMiDo&reflink=desktopwebshare_permalink), openly [muse](https://www.msn.com/en-us/news/other/secret-service-is-investigating-elon-musk-s-biden-kamala-assassination-tweet/ar-AA1qR5Q4) about potential assassination of a sitting U.S. president, and tell advertisers to [go f#@!* themselves](https://www.theverge.com/2023/11/29/23981928/elon-musk-ad-boycott-go-fuck-yourself-destroy-x).
 
-- PREZ: Check in on U.S. presidential race. https://cointelegraph.com/news/crypto-us-election-issue-first-time-history-gemini | Axios reports on a crypto "civil war":
+Who knew!
 
-- NEWMANTRA: A newsletter about emerging tech, for newbies and OGs alike. Emerging tech made accessible.
+Oh, right. Pretty much everyone who's not Elon Musk.
 
-- 2USECASES: Signin/privacy and payments are two killer cases that most apps outside of Big Tech ought to be using.
+Forbes recently [estimated](https://news.google.com/read/CBMitAFBVV95cUxPZ2laOFZvU3Z5VmptTktmdWNEQWZOQkh1dk93a19BcHcwZURia2lQdVU2UHp0blVaSWFTYXBaTm90U3EtZXIyRG51UnFKN2tFY3l3U2xkazh0NnQtTTZ1LTN1c0F3UVlyTHdXUUJFWlZYd3RKZTg1cHJXT2F0ckoxWDZvOXhfMjdmWmJ1RDAxMDNzTFZjTTBkYXVlLUt4ZGhPbHRmdmhfYVRGSV9KbFFoSTUyYjU?hl=en-US&gl=US&ceid=US%3Aen) that Twitter/X's revenue has fallen 84% since mid-2022, the last time it reported results as a public company before Musk took it private. That strikes me as a great big-picture number to contextualize Musk's chaotic misrule of the social network the last few years.
 
-- 4PART: The token can market can safely be broken down into several categories -- bitcoin, ethereum, major stablecoins, and everything else. Here's why that matters.
+Sure, it's easy for each daily crisis or controversy he creates to distract from the last. But if you want to understand the total effect of them all, that one number should sum it up pretty well: Revenue down 84%.
 
-- STRING: See page at https://www.notion.so/String-b5f6d8f2bb6f4eacb96c95276dc242bb
+As for profit, the platform [wasn't turning one](https://www.npr.org/2022/07/22/1112821653/twitter-earnings-2-quarter) even *before* Musk showed up. Now it's presumably even farther from getting into the black.
 
--->
+If you're keen to delve into the Musk-era downfall of Twitter/X in fuller detail, I would also recommend checking out [Character Limit](https://www.amazon.com/Character-Limit-Elon-Destroyed-Twitter/dp/B0CXB7DKWP/ref=sr_1_1?sr=8-1), the new book about the company by New York Times tech reporters Kate Konger and Ryan Mac.
 
-### Week in Review: Sept. 15-21, 2024
+Since the book's release on Tuesday, it's already generated a slew of [insane, previously unreported anecdotes](https://www.msn.com/en-us/money/news/new-book-reveals-elon-musks-twitter-buy-fumble-and-mix-up-over-grimes-baby-name/ar-AA1qAkMF) about Musk's takeover as the authors have made the rounds for [promotional interviews](https://www.cnbc.com/video/2024/09/17/elon-musks-x-is-a-financial-disaster-co-authors-of-new-book-character-limit-say.html?os=os). So don't fear, we won't run out anytime soon.
 
-<!-- Some leftovers from last week. These could also be good as social posts... -->
+The week also saw a tantilizing, if unlikely, escape option emerge from a different tech billionaire: Mark Cuban. He said in [an interview](https://news.google.com/read/CBMi0wFBVV95cUxObHBCZnp3aS00LWRHTEpTUGFNOVA3RUZ4SFpVekYzeEtPanJlT3ctdUdpVnBtajVDTV82dEJ5Vkx5dVREdXdTWmxoM1ZhT3FaWFVuUzFKcTNTM0NUWENZLWtsUFlEdnZyVUpRc0d4X2pwZ3g2R2JfMlVrVGM3MGR4OVU2OXppUXVCSExpb3pfSWl3QmdUc2FfSG5Va2FLeGoxMHBtREhCRURfTm9jTG54M3JHX3ZqU1dqanNLTDJxMm9CUUg5LXliVUp6eWREbWRITWV3?hl=en-US&gl=US&ceid=US%3Aen) with Wired's Lauren Goode that he would consider buying Twitter, if it were for sale. Which he adamantly doesn't believe it is.
 
-- https://www.benzinga.com/markets/cryptocurrency/24/09/40828224/jpmorgan-ceo-jamie-dimon-said-hed-fire-in-a-second-anyone-caught-trading-bitcoin-when-it-w
+(Cuban also said he would buy Fox News --  an institution that has had its own share of [toxic drama](https://www.reuters.com/legal/dominions-defamation-case-against-fox-poised-trial-after-delay-2023-04-18/) the last few years -- "in a heartbeat." But he estimates the price tag would be way too rich for even his pocketbook.)
 
-- Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
+The interview also makes crystal clear that Cuban is plenty busy these days with a pet project completely unrelated to any form of media. He's started company that sells prescription drugs at prices that sharply undercut the astronomical norms in America.
 
-- https://www.fastcompany.com/91176249/reddit-ai-openai-google-steve-huffman-internet-jen-wong-revenge
+Fair enough. But we can all hold out hope, can't we?
 
-- https://humbledollar.com/2024/09/no-regrets/
+Perhaps if Cuban's pharama company quickly comes to dominate the U.S. drug market, which sounds plausible considering the [utterly ridiculous](https://www.youtube.com/watch?v=25Tg41ZdjUk) status quo, he would want to move on to some other big project. And perhaps if the valuation of Twitter keeps falling, which also sounds [extremely plausible](https://arstechnica.com/tech-policy/2024/01/since-elon-musks-twitter-purchase-firm-reportedly-lost-72-of-its-value/), Musk would indeed become willing to sell. And then... Maybe?
 
-- https://www.wsj.com/real-estate/luxury-homes/sleep-divorce-snore-rooms-e76faa1f
+For now, let it suffice that my reaction to the mere idea of Cuban buying Twitter was exactly the same as Goode's when she broached the topic with the man himself. Honestly, I don't imagine that Goode, a former colleague at the Wall Street Journal, would've said (or certainly printed) this in a Q&A in that very old-school publication.
 
-- https://www.economist.com/business/2024/09/12/intel-is-on-life-support-can-anything-save-it
+But hey, I would also imagine a magazine like Wired gives folks a little more leeway to have a journalistic "voice." That approach can have its own sort of benefits, notably a refreshing frankness that is telling in its own way.
 
-- https://www.msn.com/en-us/money/companies/amazon-pours-2-1-billion-into-contract-delivery-lifting-wages/ar-AA1qtlRd
+Hence Goode's remark to Cuban:
+
+"Would you please, for the love of God, buy Twitter?"
 
 
-### Community
 
-- **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra perks compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and chat features. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack/subscribe) ☯️ 😉  
+
+
+
+
+
+
 
 <!--
 
-- Add BTC addy...
+Notes...
 
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar ->
+- "Would you please, for the love of God, buy Twitter?"
+
+- Lauren's Wired interview: https://www.wired.com/story/big-interview-after-shark-tank-mark-cuban-just-wants-to-break-shit-especially-the-prescription-drug-industry/
+
+- Fortune article on recent revenue drop: https://fortune.com/2024/08/15/elon-musk-tesla-stock-sale-twitter-x-advertiser-boycott-finances-bradford-ferguson/
+
+- Hq leaving sf: https://www.latimes.com/business/story/2024-09-13/elon-musks-x-departs-san-francisco-twitter-tax-break
+
+- CBS: Ad exodus likely to continue: Link tk
+
+- https://www.reuters.com/legal/us-federal-court-enforces-secs-subpoena-depose-elon-musk-2024-05-14/
+
+-New book out: https://www.rollingstone.com/culture/culture-features/how-elon-musk-destroyed-twitter-wtf-character-limit-book-1235099284/
+
+- Diddy among the people who helped finance Musk's Twitter buyout: https://finance.yahoo.com/news/sean-diddy-combs-revealed-investor-010000475.html
+
+- Haidt: 50% of his poll respondents said they wish Twitter "had never been invented," the highest such disapproval for any social network measured. https://www.nytimes.com/2024/09/17/opinion/social-media-smartphones-harm-regret.html
+
+- Twitter's woes have Tesla investors worried that Musk will liquidate more stock in the carmaker. https://fortune.com/2024/08/15/elon-musk-tesla-stock-sale-twitter-x-advertiser-boycott-finances-bradford-ferguson/
 
 -->
 
+
+### Week in Review: Sept. 15-21, 2024
+
+- **The operator of Pennsylvania's Three Mile Island nuclear plant,** which suffered a notorious meltdown in 1979, proposed a plan to re-open the facility in 2028 as an exclusive [power supplier to Microsoft](https://www.cnn.com/2024/09/20/energy/three-mile-island-microsoft-ai/index.html). The software giant and other tech companies are increasingly [looking to nuclear generation](https://medium.com/@peteramckay/whos-the-power-hog-now-9b4dbb973a1e) to run their power-hungry AI projects.
+
+- **Token prices, stocks, and other risky assets rallied** after the Federal Reserve [cut its benchmark interest-rate target](https://www.msn.com/en-us/money/markets/heres-how-the-feds-rate-cut-today-may-impact-your-finances/ar-AA1qHlD4) for the first time in more than four years Wednesday. Such a pattern is common on Wall Street because lower borrowing costs effectively encourage more aggressive, leveraged bets using borrowed money. Bitcoin posted a 7-day gain of 5.5% as of Saturday evening in New York. The Big Tech-focused Nasdaq 100 rose 2.5% for the week.
+
+- **The Wall Street Journal reported Friday** that chipmaker Qualcomm is bidding to [acquire rival Intel](https://www.wsj.com/business/deals/qualcomm-approached-intel-about-a-takeover-in-recent-days-fa114f9d?st=Cwx6DX&reflink=desktopwebshare_permalink) in a deal that would unite also-rans in the AI chip market so far against the leader Nvidia. An acquisition of Intel, valued at $93 billion heading into Monday's trading, could itself face antitrust obstacles, however. It would also represent a major historical milestone for Northern California's tech industry writ large. Literally, the 56-year-old Intel is one of the companies that put the silicon in Silicon Valley [in its early days](https://en.wikipedia.org/wiki/Timeline_of_Intel).
+
+- **Parents just don't understand AI.** According to a [new report](https://www.commonsensemedia.org/sites/default/files/research/report/2024-the-dawn-of-the-ai-era_final-release-for-web.pdf) from Common Sense Media, about 70% of American teens have used artificial intelligence, often while doing schoolwork. But most parents are unaware of this usage.
+
+- **The Trump family announced plans** for a new decentralized finance (DeFi) platform dubbed World Liberty Financial. [Wired reports](https://www.wired.com/story/trump-world-liberty-financial-crypto-defi/) that available details about the project are scant so far. But it automatically benefits from an unusual level of free publicity due to Donald Trump's campaign for a second presidential term.
+
+- **As part of his outreach to crypto voters,** Trump stopped by PubKey, a New York tavern known as a watering hole for local bitcoiners. Trump bought a round of burgers and drinks for patrons there Wednesday and paid the $950 tab in bitcoin -- likely a first for a major-party U.S. presidential candidate. ([Wall Street Journal](https://www.wsj.com/politics/elections/that-time-donald-trump-walked-into-a-bar-and-bought-a-round-using-bitcoin-92cf6dd0?reflink=desktopwebshare_permalink))
+
+- **Crypto litigation updates:** A federal court in Delaware approved bankrupt Terraform Labs' plan to [wind down its operations](https://www.reuters.com/technology/terraform-labs-approved-bankruptcy-wind-down-after-us-sec-settlement-2024-09-19/). The company estimated it could pay up to $442.2 million to customers and other creditors as part of a liquidation. Meanwhile, OpenSea was [hit with a class-action lawsuit](https://decrypt.co/250564/opensea-nft-marketplace-class-action-suit-securities) alleging that the non-fungible tokens investors buy and sell on its platform are unregistered securities. And comedian David Letterman [reached the final round](https://abcnews.go.com/US/wireStory/jury-duty-david-letterman-auditioned-role-113743856) of jury selection on an undisclosed crypto fraud case in New York. But he was ultimately cut from the jury pool.
+
+### Community
+
+- **Become a paid subscriber to w3w.** The newsletter offers several paid options via Substack, each with extra perks compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and chat features. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack/subscribe) ☯️
+
 ### Odds & Ends
 
-- Getting married on-chain. https://qz.com/marriage-wedding-crypto-blockchain-1851632745
+- **Earth will technically (if temporarily) have a second moon beginning next week.** Astronomers say an asteroid-like body dubbed 2024 PT5 that will be orbiting the planet Sept. 29 to Nov. 25 qualifies as a "mini-moon." ([Salon](https://www.salon.com/2024/09/20/lunar-guest-earth-is-getting-a-second-moon-for-two-months/))
 
-- https://www.msn.com/en-us/foodanddrink/foodnews/i-just-learned-what-paprika-is-really-made-from-and-i-need-to-lie-down/ar-AA1qjsU0?ocid=hpmsn&cvid=7d798e139210446694cfed68e63e9360&ei=21
+- **Sofia Loren turned 90 on Friday.** However off-topic [this news](https://www.yahoo.com/news/sophia-loren-turns-90-italian-124521422.html) may be for this space, my mother would definitely want me to include it. So there you go. 😊
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
@@ -63,4 +108,4 @@ _**About me: I'm a New York-based creator with more than seven years' experience
 
  _**To reach me directly with feedback, a story suggestion, or other queries, please email peter[at]w3w[dot]media.**_
 
- _**Best wishes for a healthy and productive week ahead.**_ 😊
+ _**Best wishes for a healthy and productive week ahead.**_
