New subhead + copyedits

--- a/2024/2024-09-22.md
+++ b/2024/2024-09-22.md
@@ -1,78 +1,38 @@
 # Sell, Elon. Sell.
-## TKTKKTKTK
+## Chaos at Twitter/X is a bigger problem than any its self-appointed savior was supposed to solve in the first place. The solution is obvious.
 
 ![Bluebird apparently "pointing " with his wing, telling another bluebird to GTFO.](https://images.unsplash.com/photo-1650423621016-4e3b97a8d37f?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
 *Photo courtesy of the Dulcey Lima via Unsplash*
 
-**Turns out it's really bad for business** for a tech CEO to repeatedly [alienate](https://www.nbcnews.com/tech/elon-musk-black-twitter-influencers-hate-speech-rcna59474) users of his product, file [frivolous lawsuits](https://www.nbcnews.com/tech/tech-news/elon-musk-x-twitter-ccdh-lawsuit-rcna144960), arbitrarily [dump a brand name](https://www.forbes.com/sites/marcuscollins/2023/07/30/the-real-lesson-to-be-learned-from-twitters-rebrand/) so recognizable it's a widely used verb, respond [with poop emojis](https://mashable.com/article/twitter-press-poop-emoji) to press inquiries as a standard PR "strategy," use psychedelic drugs so much that his board members leak their concerns [to the Wall Street Journal](https://www.wsj.com/business/elon-musk-illegal-drugs-e826a9e1?st=qxMiDo&reflink=desktopwebshare_permalink), openly [muse](https://www.msn.com/en-us/news/other/secret-service-is-investigating-elon-musk-s-biden-kamala-assassination-tweet/ar-AA1qR5Q4) about potential assassination of a sitting U.S. president, and tell advertisers to [go f#@!* themselves](https://www.theverge.com/2023/11/29/23981928/elon-musk-ad-boycott-go-fuck-yourself-destroy-x).
+**Turns out it's really bad for business** for a tech CEO to repeatedly [alienate](https://www.nbcnews.com/tech/elon-musk-black-twitter-influencers-hate-speech-rcna59474) users, file [frivolous lawsuits](https://www.nbcnews.com/tech/tech-news/elon-musk-x-twitter-ccdh-lawsuit-rcna144960), arbitrarily [dump a brand name](https://www.forbes.com/sites/marcuscollins/2023/07/30/the-real-lesson-to-be-learned-from-twitters-rebrand/) so recognizable it's turned into a widely used verb, respond [with poop emojis](https://mashable.com/article/twitter-press-poop-emoji) to press inquiries as a standard PR "strategy," imbibe psychedelic drugs so much that his board members leak their concerns [to the Wall Street Journal](https://www.wsj.com/business/elon-musk-illegal-drugs-e826a9e1?st=qxMiDo&reflink=desktopwebshare_permalink), openly [muse](https://www.msn.com/en-us/news/other/secret-service-is-investigating-elon-musk-s-biden-kamala-assassination-tweet/ar-AA1qR5Q4) about potential assassination of a sitting U.S. president, and tell advertisers to [go f#@!* themselves](https://www.theverge.com/2023/11/29/23981928/elon-musk-ad-boycott-go-fuck-yourself-destroy-x).
 
 Who knew!
 
 Oh, right. Pretty much everyone who's not Elon Musk.
 
-Forbes recently [estimated](https://news.google.com/read/CBMitAFBVV95cUxPZ2laOFZvU3Z5VmptTktmdWNEQWZOQkh1dk93a19BcHcwZURia2lQdVU2UHp0blVaSWFTYXBaTm90U3EtZXIyRG51UnFKN2tFY3l3U2xkazh0NnQtTTZ1LTN1c0F3UVlyTHdXUUJFWlZYd3RKZTg1cHJXT2F0ckoxWDZvOXhfMjdmWmJ1RDAxMDNzTFZjTTBkYXVlLUt4ZGhPbHRmdmhfYVRGSV9KbFFoSTUyYjU?hl=en-US&gl=US&ceid=US%3Aen) that Twitter/X's revenue has fallen 84% since mid-2022, the last time it reported results as a public company before Musk took it private. That strikes me as a great big-picture number to contextualize Musk's chaotic misrule of the social network the last few years.
+Forbes recently [estimated](https://news.google.com/read/CBMitAFBVV95cUxPZ2laOFZvU3Z5VmptTktmdWNEQWZOQkh1dk93a19BcHcwZURia2lQdVU2UHp0blVaSWFTYXBaTm90U3EtZXIyRG51UnFKN2tFY3l3U2xkazh0NnQtTTZ1LTN1c0F3UVlyTHdXUUJFWlZYd3RKZTg1cHJXT2F0ckoxWDZvOXhfMjdmWmJ1RDAxMDNzTFZjTTBkYXVlLUt4ZGhPbHRmdmhfYVRGSV9KbFFoSTUyYjU?hl=en-US&gl=US&ceid=US%3Aen) that Twitter/X's revenue has fallen 84% since mid-2022, the last time it reported results as a public company before Musk took it private. That strikes me as a great big-picture number to contextualize Musk's chaotic misrule of the social network.
 
-Sure, it's easy for each daily crisis or controversy he creates to distract from the last. But if you want to understand the total effect of them all, that one number should sum it up pretty well: Revenue down 84%.
+Sure, it's easy for each daily crisis or controversy he creates to distract from the last. But if you want to understand the total effect of them all, that single number sums it up pretty well: Revenue down 84%.
 
 As for profit, the platform [wasn't turning one](https://www.npr.org/2022/07/22/1112821653/twitter-earnings-2-quarter) even *before* Musk showed up. Now it's presumably even farther from getting into the black.
 
-If you're keen to delve into the Musk-era downfall of Twitter/X in fuller detail, I would also recommend checking out [Character Limit](https://www.amazon.com/Character-Limit-Elon-Destroyed-Twitter/dp/B0CXB7DKWP/ref=sr_1_1?sr=8-1), the new book about the company by New York Times tech reporters Kate Konger and Ryan Mac.
+If you're keen to delve into the Musk-era downfall of Twitter/X in fuller detail, I would recommend checking out [Character Limit](https://www.amazon.com/Character-Limit-Elon-Destroyed-Twitter/dp/B0CXB7DKWP/ref=sr_1_1?sr=8-1), the new book about the company by New York Times tech reporters Kate Konger and Ryan Mac.
 
 Since the book's release on Tuesday, it's already generated a slew of [insane, previously unreported anecdotes](https://www.msn.com/en-us/money/news/new-book-reveals-elon-musks-twitter-buy-fumble-and-mix-up-over-grimes-baby-name/ar-AA1qAkMF) about Musk's takeover as the authors have made the rounds for [promotional interviews](https://www.cnbc.com/video/2024/09/17/elon-musks-x-is-a-financial-disaster-co-authors-of-new-book-character-limit-say.html?os=os). So don't fear, we won't run out anytime soon.
 
-The week also saw a tantilizing, if unlikely, escape option emerge from a different tech billionaire: Mark Cuban. He said in [an interview](https://news.google.com/read/CBMi0wFBVV95cUxObHBCZnp3aS00LWRHTEpTUGFNOVA3RUZ4SFpVekYzeEtPanJlT3ctdUdpVnBtajVDTV82dEJ5Vkx5dVREdXdTWmxoM1ZhT3FaWFVuUzFKcTNTM0NUWENZLWtsUFlEdnZyVUpRc0d4X2pwZ3g2R2JfMlVrVGM3MGR4OVU2OXppUXVCSExpb3pfSWl3QmdUc2FfSG5Va2FLeGoxMHBtREhCRURfTm9jTG54M3JHX3ZqU1dqanNLTDJxMm9CUUg5LXliVUp6eWREbWRITWV3?hl=en-US&gl=US&ceid=US%3Aen) with Wired's Lauren Goode that he would consider buying Twitter, if it were for sale. Which he adamantly doesn't believe it is.
+The week also saw a tantilizing, if unlikely, escape option emerge from a different tech billionaire: Mark Cuban. He said in [an interview](https://news.google.com/read/CBMi0wFBVV95cUxObHBCZnp3aS00LWRHTEpTUGFNOVA3RUZ4SFpVekYzeEtPanJlT3ctdUdpVnBtajVDTV82dEJ5Vkx5dVREdXdTWmxoM1ZhT3FaWFVuUzFKcTNTM0NUWENZLWtsUFlEdnZyVUpRc0d4X2pwZ3g2R2JfMlVrVGM3MGR4OVU2OXppUXVCSExpb3pfSWl3QmdUc2FfSG5Va2FLeGoxMHBtREhCRURfTm9jTG54M3JHX3ZqU1dqanNLTDJxMm9CUUg5LXliVUp6eWREbWRITWV3?hl=en-US&gl=US&ceid=US%3Aen) with Wired's Lauren Goode that he would consider buying Twitter/X, if it were for sale. Which he adamantly doesn't believe it is.
 
 (Cuban also said he would buy Fox News --  an institution that has had its own share of [toxic drama](https://www.reuters.com/legal/dominions-defamation-case-against-fox-poised-trial-after-delay-2023-04-18/) the last few years -- "in a heartbeat." But he estimates the price tag would be way too rich for even his pocketbook.)
 
-The interview also makes crystal clear that Cuban is plenty busy these days with a pet project completely unrelated to any form of media. He's started company that sells prescription drugs at prices that sharply undercut the astronomical norms in America.
+The interview also makes clear that Cuban is plenty busy these days with a project completely unrelated to any form of media. He's started company that sells prescription drugs at prices that sharply undercut the astronomical norms in America.
 
-Fair enough. But we can all hold out hope, can't we?
+Fair enough. But we can all hold out hope on that social-media thing, can't we?
 
-Perhaps if Cuban's pharama company quickly comes to dominate the U.S. drug market, which sounds plausible considering the [utterly ridiculous](https://www.youtube.com/watch?v=25Tg41ZdjUk) status quo, he would want to move on to some other big project. And perhaps if the valuation of Twitter keeps falling, which also sounds [extremely plausible](https://arstechnica.com/tech-policy/2024/01/since-elon-musks-twitter-purchase-firm-reportedly-lost-72-of-its-value/), Musk would indeed become willing to sell. And then... Maybe?
+Perhaps if Cuban's new company quickly comes to dominate the U.S. drug market, which sounds plausible considering the [utterly ridiculous](https://www.youtube.com/watch?v=25Tg41ZdjUk) status quo, he'll move on to some other big undertaking. And perhaps if the valuation of Twitter/X keeps falling, which also sounds [extremely plausible](https://arstechnica.com/tech-policy/2024/01/since-elon-musks-twitter-purchase-firm-reportedly-lost-72-of-its-value/), Musk would indeed become willing to sell. And then... Maybe?
 
-For now, let it suffice that my reaction to the mere idea of Cuban buying Twitter was exactly the same as Goode's when she broached the topic with the man himself. Honestly, I don't imagine that Goode, a former colleague at the Wall Street Journal, would've said (or certainly printed) this in a Q&A in that very old-school publication.
-
-But hey, I would also imagine a magazine like Wired gives folks a little more leeway to have a journalistic "voice." That approach can have its own sort of benefits, notably a refreshing frankness that is telling in its own way.
-
-Hence Goode's remark to Cuban:
+For now, let it suffice that my reaction to the mere mention of Cuban buying Twitter/X was exactly the same as that of Goode, a former colleague at the Wall Street Journal, when she broached the topic with Cuban himself.
 
 "Would you please, for the love of God, buy Twitter?"
-
-
-
-
-
-
-
-
-
-
-<!--
-
-Notes...
-
-- "Would you please, for the love of God, buy Twitter?"
-
-- Lauren's Wired interview: https://www.wired.com/story/big-interview-after-shark-tank-mark-cuban-just-wants-to-break-shit-especially-the-prescription-drug-industry/
-
-- Fortune article on recent revenue drop: https://fortune.com/2024/08/15/elon-musk-tesla-stock-sale-twitter-x-advertiser-boycott-finances-bradford-ferguson/
-
-- Hq leaving sf: https://www.latimes.com/business/story/2024-09-13/elon-musks-x-departs-san-francisco-twitter-tax-break
-
-- CBS: Ad exodus likely to continue: Link tk
-
-- https://www.reuters.com/legal/us-federal-court-enforces-secs-subpoena-depose-elon-musk-2024-05-14/
-
--New book out: https://www.rollingstone.com/culture/culture-features/how-elon-musk-destroyed-twitter-wtf-character-limit-book-1235099284/
-
-- Diddy among the people who helped finance Musk's Twitter buyout: https://finance.yahoo.com/news/sean-diddy-combs-revealed-investor-010000475.html
-
-- Haidt: 50% of his poll respondents said they wish Twitter "had never been invented," the highest such disapproval for any social network measured. https://www.nytimes.com/2024/09/17/opinion/social-media-smartphones-harm-regret.html
-
-- Twitter's woes have Tesla investors worried that Musk will liquidate more stock in the carmaker. https://fortune.com/2024/08/15/elon-musk-tesla-stock-sale-twitter-x-advertiser-boycott-finances-bradford-ferguson/
-
--->
-
 
 ### Week in Review: Sept. 15-21, 2024
 
